Feature : order tracking not needed for rejected or cancelled

--- a/src/app/ProviderWall/ManageOrders/views/oz.OrderContent.tpl.html
+++ b/src/app/ProviderWall/ManageOrders/views/oz.OrderContent.tpl.html
@@ -227,6 +227,7 @@
 
 
 <!-- Tracking tree////////////////////////////////// -->
+<div ng-hide=" order.status=='cancelled' || order.status=='rejected'">
 <div class="headingDiv"> 
 <span class="bold">Order Tracking</span>
 
@@ -348,6 +349,7 @@
 
 
           </div><!-- order tracking tree -->
+    </div>
 <!-- Tracking tree////////////////////////////////// -->
 
 
@@ -379,10 +381,10 @@
   </div>
 </div>
        
-<br/>
 
 
-</div><br/><br/>
+
+</div><br/>
 <!-- Innvoice ////////////////////////////////// -->
      
 
