added typeahead for state, city, zipcode, area to manage pickup address

--- a/src/app/ProviderWall/ManagePickupAddress/views/oz.seller.pickupaddress.manage.tpl.html
+++ b/src/app/ProviderWall/ManagePickupAddress/views/oz.seller.pickupaddress.manage.tpl.html
@@ -29,25 +29,26 @@
                 <small style="color:red;" ng-show="((form.addPickupAddress.addressline2.$dirty && form.addPickupAddress.addressline2.$invalid) || (form.addPickupAddress.addressline2.$invalid && form.addPickupAddress.submitted))">*Please enter address line 2!</small>
               </td>
               <td width="15%;">
-                <input type="text" name="area" class="form-control" ng-model="pickup.area" placeholder="area" required>
-                <small style="color:red;" ng-show="((form.addPickupAddress.area.$dirty && form.addPickupAddress.area.$invalid) || (form.addPickupAddress.area.$invalid && form.addPickupAddress.submitted))">*Please enter area!</small>
-              </td>
-              <td width="15%;">
-              <input type="text" name="city" class="form-control" ng-model="pickup.city" placeholder="city" required>
-                <small style="color:red;" ng-show="((form.addPickupAddress.city.$dirty && form.addPickupAddress.city.$invalid) || (form.addPickupAddress.city.$invalid && form.addPickupAddress.submitted))">*Please enter city!</small>
-              </td>
-              <td width="15%;">
-                <input type="text" name="state" class="form-control" ng-model="pickup.state" placeholder="state" required>
-                <small style="color:red;" ng-show="((form.addPickupAddress.state.$dirty && form.addPickupAddress.state.$invalid) || (form.addPickupAddress.state.$invalid && form.addPickupAddress.submitted))">*Please enter state!</small>
-              </td>
-              <td width="15%;">
                 <input type="text" name="country" class="form-control" ng-model="pickup.country" placeholder="country" required>
                 <small style="color:red;" ng-show="((form.addPickupAddress.country.$dirty && form.addPickupAddress.country.$invalid) || (form.addPickupAddress.country.$invalid && form.addPickupAddress.submitted))">*Please enter country!</small>
               </td>
               <td width="15%;">
-                <input type="text" name="zipcode" class="form-control" ng-pattern="/^[0-9]{6}$/" ng-model="pickup.zipcode" placeholder="zipcode" required>
+                <input name="state" class="form-control" type="text" placeholder="state" required ng-model="pickup.state" typeahead="state for state in states | filter:$viewValue | limitTo:6" typeahead-on-select="getCityForState(pickup.state)" />
+                <small style="color:red;" ng-show="((form.addPickupAddress.state.$dirty && form.addPickupAddress.state.$invalid) || (form.addPickupAddress.state.$invalid && form.addPickupAddress.submitted))">*Please enter state!</small>
+              </td>
+              <td width="15%;">
+                <input name="city" class="form-control" type="text" placeholder="city" required ng-model="pickup.city" typeahead="city for city in cities | filter:$viewValue | limitTo:6" typeahead-on-select="getZipcodeForCity(pickup.city)" />
+                <small style="color:red;" ng-show="((form.addPickupAddress.city.$dirty && form.addPickupAddress.city.$invalid) || (form.addPickupAddress.city.$invalid && form.addPickupAddress.submitted))">*Please enter city!</small>
+              </td>
+              <td width="15%;">
+                <input name="zipcode" class="form-control" type="text" ng-pattern="/^[0-9]{6}$/" ng-model="pickup.zipcode" placeholder="zipcode" required typeahead="zipcode for zipcode in zipcodes | filter:$viewValue | limitTo:6" typeahead-on-select="getAreaForZipcode(pickup.zipcode)"/>
                 <small style="color:red;" ng-show="((form.addPickupAddress.zipcode.$dirty && form.addPickupAddress.zipcode.$invalid) || (form.addPickupAddress.zipcode.$invalid && form.addPickupAddress.submitted))">*Please enter zipcode and must be a 6 digit number only!</small>
               </td>
+              <td width="15%;">
+                <input type="text" name="area" class="form-control" ng-model="pickup.area" placeholder="area" required typeahead="area for area in Areas | filter:$viewValue | limitTo:6">
+                <small style="color:red;" ng-show="((form.addPickupAddress.area.$dirty && form.addPickupAddress.area.$invalid) || (form.addPickupAddress.area.$invalid && form.addPickupAddress.submitted))">*Please enter area!</small>
+              </td>              
+              
               <td width="5%;">
                 <button type="submit" class="btn btn-primary btn-sm" ng-click="addPickupAddress()">Add</button>
               </td>
