Feature : Add and update provider image type check added

--- a/src/app/ProviderWall/ManageSeller/views/oz.seller.manage.tpl.html
+++ b/src/app/ProviderWall/ManageSeller/views/oz.seller.manage.tpl.html
@@ -63,7 +63,7 @@
 					</div>
 
 					<div  id="oz-signup-input-group" class="input-group">
-						<input type="file" class="form-control" ng-file-select="onFileSelect($files)" >
+						<input type="file" id="addProvider" class="form-control" ng-file-select="onFileSelect($files)" >
 						<small style="color:red;" ng-show="addSellerLogo">*Please choose your provider logo!</small>
 					</div>
 
@@ -204,7 +204,7 @@
 						</div>
 
 						<div  id="oz-signup-input-group" class="input-group">
-							<input type="file" class="form-control" ng-file-select="onFileSelectUpdate($files)" >
+							<input type="file" id="updateProvider" class="form-control" ng-file-select="onFileSelectUpdate($files)" >
 							<p class="text-muted"><small>** To edit existing logo please select choose file.</small></p>
 						</div>
 
