set css for counter clock for different browsers

--- a/src/app/ProviderWall/ManageOrders/views/oz.providerwall.order-counter.tpl.html
+++ b/src/app/ProviderWall/ManageOrders/views/oz.providerwall.order-counter.tpl.html
@@ -4,7 +4,7 @@
 		<div ng-show="count.status == 'past' " style="text-transform:uppercase; letter-spacing:1px;font-weight:bold; font-size:12px;margin-left:10px;">
 		<p>Delivered Orders</p> 
 		</div>
-		<div ng-show="count.status == 'past' " class = "clock zoomCssControlClock" oz-clock  current-value = 'count.statuscount' style="margin:2em;width: 200%;left: -54%;" ></div>
+		<div ng-show="count.status == 'past' " class = "zoomCssControlClock clock" oz-clock  current-value = 'count.statuscount' style="margin:2em;width: 310%;left: -115%; top:-45px;" ></div>
 	</div>	
 	
 </div>
