addedseller change  sync check for pickup address and text for signin template

--- a/src/app/user/views/oz.signin.tpl.html
+++ b/src/app/user/views/oz.signin.tpl.html
@@ -7,7 +7,7 @@
 		</center>
 
 		<div id="oz-signup-input-group" class="input-group">
- 			<p id="oz-general-terms">Sign in with OrderZapp sellers application helps providers to manage their branches, products, orders and other related policies.</p>
+ 			<p id="oz-general-terms">Sign in with OrderZapp sellers application helps sellers to manage their branches, products, orders and other related policies.</p>
 		</div>
 
 		<div id="oz-signin-input-group" class="input-group">
