--- a/src/app/ProviderWall/ManageDeliveryCharges/views/oz.deliverycharges.manage.tpl.html
+++ b/src/app/ProviderWall/ManageDeliveryCharges/views/oz.deliverycharges.manage.tpl.html
@@ -1,133 +1,17 @@
 <div style="border: 1px solid #EEE8E8; border-radius:6px; padding:10px;" class="container">
 	<div style="margin:0px;" class="row">
-		<div class="col-md-3">
-
-			<div id="oz-signup-input-group" class="input-group">
-				<p class="text-muted">Please Select Country</p>
-	 			<input name="country" class="form-control" type="text" placeholder="country" required ng-model="country" typeahead="country for country in countries | filter:$viewValue | limitTo:6" typeahead-on-select="" />
+		<div class="col-md-6">
+			<div id="tabs" >
+				<ul id="tabPrice" class=" policyTab nav nav-pills nav-justified">
+				  <li ng-class="active3" class="tabPolicyLi active"><a showtab="" href="" ui-sref="managedeliverycharges.view.display">View Area Coverage</a></li>
+				  <li ng-class="active3" class="tabPolicyLi"><a showtab="" href="" ui-sref="managedeliverycharges.view.manage">Manage Area Coverage</a></li>
+				</ul>
 			</div>
-
-		</div>		
-
-		<div class="col-md-3">
-
-			<div id="oz-signup-input-group" class="input-group">
-				<p class="text-muted">Please Select State</p>
-	 			<input name="state" class="form-control" type="text" placeholder="state" required ng-model="state" typeahead="state for state in states | filter:$viewValue | limitTo:6" typeahead-on-select="getCityForState(state)" />
-			</div>
-
-		</div>	
-
-		<div class="col-md-3">
-
-			<div id="oz-signup-input-group" class="input-group">
-				<p class="text-muted">Please Select City</p>
-	 			<input name="city" class="form-control" type="text" placeholder="city" required ng-model="city" typeahead="city for city in cities | filter:$viewValue | limitTo:6" typeahead-on-select="getZipcodeForCity(city)" />
-			</div>
-
 		</div>
-		
-		<div class="col-md-3">	
-
-			<div id="oz-signup-input-group" class="input-group">
-				<p class="text-muted">Please Select Zipcode</p>
-	 			<input name="zipcode" class="form-control" type="text" placeholder="zipcode" required ng-model="zipcode" typeahead="zipcode for zipcode in zipcodes | filter:$viewValue | limitTo:6" typeahead-on-select="getAreaForZipcode(zipcode)" />
-			</div>			
-
-		</div>		
-	</div>
+	</div>	
 	<div style="margin:0px;" class="row">
 		<div class="col-md-12">
-			<p style="font-size:12px; font-weight:bold; letter-spacing:1px;" class="text-muted">
-			** Selecting zipcode will let you view details about delivery availability at a particular branch and you can manage your available delivery areas and its charges from here.
-			</p>
-		</div>
-	</div>
-	<div ng-show="AreaUnderZipcode.length > 0 && showAreaUnderZipcode" style="margin:0px;" class="row">
-		<div style="margin:10px auto;" class="col-md-12">
-			<table class="table table-striped table-condensed">
-				<thead>
-					<tr style="letter-spacing:1px; font-size:13px; font-weight:bold; text-transform:uppercase;">
-						<td width="10%">Serial #</td>
-						<td width="40%">Area</td>
-						<td width="25%">Availability</td>
-						<td width="25%">Delivery Charge(<i class="fa fa-inr"></i>)</td>
-					</tr>
-				</thead>
-				<tbody>
-					<tr style="letter-spacing:1px; font-size:12px; text-transform:uppercase;" ng-repeat="available in delivery_available">
-						<td>{{$index + 1}}</td>
-						<td>{{available.coverage.area}}</td>
-						<td><input type="checkbox" checklist-model="delivery.available" checklist-value="available.coverage.area"></td>
-						<td><input style="width:80%" class="form-control" type="text" ng-pattern="/^[0-9]*$/" ng-model="available.value" /></td>
-					</tr>
-				</tbody>				
-			</table>
-			<div style="margin:0px;" class="row">
-				<div class="col-md-9"></div>
-				<div style="padding:2px;" class="col-md-3">
-					<button style="width: 90%;background-color:#EC670D;border-color: #E47814;font-weight:bold;border-radius:1px;" class="btn btn-primary" ng-click="addAreaDeliveryAvailability(city, zipcode)"><i class="fa fa-save"></i>&nbsp;&nbsp;Save</button>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div ng-show="deliveryAvailablityArea.length > 0 && showDeliveryAvailaibility" style="margin:0px;" class="row">
-		<div style="margin:10px auto;" class="col-md-12">
-			<table class="table table-striped table-condensed">
-				<thead>
-					<tr style="letter-spacing:1px; font-size:13px; font-weight:bold; text-transform:uppercase;">
-						<td width="10%">Serial #</td>
-						<td width="40%">Area</td>
-						<td width="25%">Availability</td>
-						<td width="25%">Delivery Charge(<i class="fa fa-inr"></i>)</td>
-					</tr>
-				</thead>
-				<tbody>
-					<tr style="letter-spacing:1px; font-size:12px; text-transform:uppercase;" ng-repeat="area in deliveryAvailablityArea">
-						<td>{{$index + 1}}</td>
-						<td>{{area.coverage.area}}</td>
-						<td><p style="font-size:12px;"><span class="label label-success"><i class="fa fa-check"></i>&nbsp;&nbsp;Available</span></p></td>
-						<td><p style="font-size:12px;letter-spacing:1px;">{{area.value}}</p></td>
-					</tr>
-				</tbody>				
-			</table>
-			<div style="margin:0px;" class="row">
-				<div class="col-md-9"></div>
-				<div style="padding:2px;" class="col-md-3">
-					<button style="background-color:#24677C; border-color:#24677C; width:90%;font-weight:bold;border-radius:1px; float:right;" class="  btn btn-sm btn-primary" ng-click="showEditDeliveryAvailablity(zipcode)"><i class="fa fa-edit"></i>&nbsp;&nbsp;Edit</button>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div ng-show="edit_availability.length > 0 && editDeliveryAvailaibility" style="margin:0px;" class="row">
-		<div style="margin:10px auto;" class="col-md-12">
-			<table class="table table-striped table-condensed">
-				<thead>
-					<tr style="letter-spacing:1px; font-size:13px; font-weight:bold; text-transform:uppercase;">
-						<td width="10%">Serial #</td>
-						<td width="40%">Area</td>
-						<td width="25%">Availability</td>
-						<td width="25%">Delivery Charge(<i class="fa fa-inr"></i>)</td>
-					</tr>
-				</thead>
-				<tbody>
-					<tr style="letter-spacing:1px; font-size:12px; text-transform:uppercase;" ng-repeat="area in edit_availability">
-						<td>{{$index + 1}}</td>
-						<td>{{area.coverage.area}}</td>
-						<td><input type="checkbox" checklist-model="delivery.available" checklist-value="area.coverage.area"></td>
-						<td><input style="width:80%" class="form-control" type="text" ng-pattern="/^[0-9]*$/" ng-model="area.value" /></td>
-					</tr>
-				</tbody>				
-			</table>
-			<div style="margin:0px;" class="row">
-				<div class="col-md-6"></div>
-				<div style="padding:2px;" class="col-md-3">
-					<button style="width: 90%;background-color:transparent;border-color: #b3b3b3; color:black;font-weight:bold;border-radius:1px; float:right;" class="btn btn-primary" ng-click="cancelEditDelivery()"><i class="fa fa-times"></i>&nbsp;&nbsp;Cancel</button>
-				</div>
-				<div style="padding:2px;" class="col-md-3">
-					<button style="width: 90%;background-color:#EC670D;border-color: #E47814;font-weight:bold;border-radius:1px;" class="btn btn-primary" ng-click="editAreaDeliveryAvailability(city, zipcode)"><i class="fa fa-save"></i>&nbsp;&nbsp;Save</button>
-				</div>
-			</div>
+			<div ui-view></div>
 		</div>
 	</div>		
 </div>
