--- a/src/app/index.html
+++ b/src/app/index.html
@@ -71,7 +71,7 @@
               <li><a ng-show="selectedproviderid && selectedBranchId" href="" ui-sref="manageproduct.view">Manage Product</a></li>
               <li><a ng-show="selectedproviderid && selectedBranchId" href="" ui-sref="manageprices.view">Manage Prices</a></li>
               <li><a ng-show="selectedproviderid && selectedBranchId" href="" ui-sref="managediscount.view">Manage Discount</a></li>
-              <li><a ng-show="selectedproviderid && selectedBranchId" href="" ui-sref="managedeliverycharges.view">Manage Delivery Charges</a></li>
+              <li><a ng-show="selectedproviderid && selectedBranchId" href="" ui-sref="managedeliverycharges.view.display">Manage Delivery Charges</a></li>
               <li><a ng-show="selectedproviderid && selectedBranchId" href="" ui-sref='manageproductavailability.view'>Manage Product Availability</a></li>
               <li><a ng-show="selectedproviderid && selectedBranchId" href="" ui-sref="managepolicy.view">Manage Policy</a></li>
               <li><a href="" ui-sref="usersettings.manage">Settings</a></li>
