--- a/src/app/ProviderWall/ManageProductAvailability/views/oz.manage.product.availability.content.tpl.html
+++ b/src/app/ProviderWall/ManageProductAvailability/views/oz.manage.product.availability.content.tpl.html
@@ -20,6 +20,7 @@
         </td>
         <td style = 'width: 40%'>
           <h5>Product Non Availability</h5>
+          <div style = 'width : 50%;float:left;' ><h6>To</h6></div><div style = 'width : 50%; float :right' ><h6>From</h6></div>
         </td>
         <td style = 'width : 35%'>
           <h5>Action</h5>
