validation added to productavailability

--- a/src/app/ProviderWall/ManageProductAvailability/views/oz.manage.product.availability.content.tpl.html
+++ b/src/app/ProviderWall/ManageProductAvailability/views/oz.manage.product.availability.content.tpl.html
@@ -48,7 +48,7 @@
             		 </div>
 
             		  <div  style = 'width : 49%; float : right; height : 40px'>
-            		      <input type="text" placeholder="Please select start date" ng-model="list.productnotavailable.to" class="form-control disableEditingMode" name="startDate"  datepicker-popup="{{format}}"  is-open="opened3" min="today"  datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close"  readonly="true">	
+            		      <input type="text" placeholder="Please select start date" ng-model="list.productnotavailable.to" class="form-control disableEditingMode" name="startDate"  datepicker-popup="{{format}}"  is-open="opened3" min="list.productnotavailable.from"  datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close"  readonly="true">	
                   </div>
 
                 <!--    <div >  -->
