--- a/src/app/OrderZapp/oz/views/oz.seller.participation.manage.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.seller.participation.manage.tpl.html
@@ -21,7 +21,7 @@
             </div>    
         </div>
 
-        <input type = 'file' class = 'form-control' ng-file-select = "onFileSelect($files)" style = 'margin-top : 40px;'>
+        <input id="addAgreementSeller" type = 'file' class = 'form-control'  ng-file-select = "onFileSelect($files)" style = 'margin-top : 40px;'>
 
     	<textarea class = form-control ng-model = 'content' style = 'margin-top : 40px;' placeholder = 'Comments'> </textarea>
 
