--- a/src/app/OrderZapp/oz/views/oz.orderProcess.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.orderProcess.tpl.html
@@ -6,7 +6,7 @@
 		</div>
 
 		<div>
-		    <span> Order Status : </span> <input type = 'text' class = 'form-control' ng-model = 'order.order_status'>
+		    <span> Order Process Configuration : </span> <input type = 'text' class = 'form-control' ng-model = 'order.order_status'>
 		</div>
 
 		<div>
